@@ -1,13 +1,11 @@
 package nl.tudelft.ch.login.federation;
 
-import com.github.benmanes.caffeine.cache.Cache;
 import nl.tudelft.ch.login.dienst2.Dienst2UserAdapter;
 import nl.tudelft.ch.login.dienst2.client.PeopleApiClient;
 import nl.tudelft.ch.login.dienst2.model.Person;
 import org.jboss.logging.Logger;
 import org.keycloak.component.ComponentModel;
 import org.keycloak.connections.httpclient.HttpClientProvider;
-import org.keycloak.models.GroupModel;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.RealmModel;
 import org.keycloak.models.UserModel;
@@ -16,35 +14,39 @@ import org.keycloak.storage.UserStorageProvider;
 import org.keycloak.storage.user.UserLookupProvider;
 
 import java.io.IOException;
-import java.util.*;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.Optional;
 
+/**
+ * Keycloak user-storage provider backed by the Dienst2 people API.
+ */
 public class Dienst2UserProvider implements UserStorageProvider, UserLookupProvider {
     private static final Logger LOGGER = Logger.getLogger(Dienst2UserProvider.class);
+    private static final String SURFCONEXT_PREFIX = "surfconext.";
+    private static final String GOOGLE_PREFIX = "google.";
+    private static final String WISVCH_PREFIX = "wisvch.";
 
     private final KeycloakSession session;
     private final ComponentModel model;
+    private final String componentId;
     private final PeopleApiClient peopleApiClient;
-    private final Cache<String, Person> personCache;
-    private final Cache<String, List<String>> groupCache;
-    private final String cacheNamespace;
+    private final CachedDienst2Lookup lookup;
+    private final KeycloakGroupResolver groupResolver;
 
-    public Dienst2UserProvider(
+    Dienst2UserProvider(
             KeycloakSession session,
             ComponentModel model,
-            Cache<String, Person> personCache,
-            Cache<String, List<String>> groupCache) {
+            CachedDienst2Lookup lookup,
+            KeycloakGroupResolver groupResolver) {
         this.session = session;
         this.model = model;
-        this.personCache = personCache;
-        this.groupCache = groupCache;
-        this.cacheNamespace = model.getId() + ':';
+        this.componentId = model.getId();
+        this.lookup = lookup;
+        this.groupResolver = groupResolver;
 
-        final String baseUrl = model.get(Dienst2UserProviderFactory.BASE_URL);
-        final String apiKey = model.get(Dienst2UserProviderFactory.API_KEY);
-        final String endpoint = model.get(Dienst2UserProviderFactory.API_ENDPOINT);
-
+        String baseUrl = model.get(Dienst2UserProviderFactory.BASE_URL);
+        String apiKey = model.get(Dienst2UserProviderFactory.API_KEY);
+        String endpoint = model.get(Dienst2UserProviderFactory.API_ENDPOINT);
         HttpClientProvider httpClientProvider = session.getProvider(HttpClientProvider.class);
         this.peopleApiClient = new PeopleApiClient(httpClientProvider.getHttpClient(), baseUrl, endpoint, apiKey);
         LOGGER.debugf("Initialized Dienst2UserProvider baseUrl=%s endpoint=%s", baseUrl, endpoint);
@@ -52,210 +54,97 @@ public class Dienst2UserProvider implements UserStorageProvider, UserLookupProvi
 
     @Override
     public void close() {
-        LOGGER.trace("Dienst2UserProvider.close()");
-        // nothing to close; Keycloak manages the HTTP client lifecycle
+        // Keycloak owns the HTTP client's lifecycle.
     }
 
+    /**
+     * Resolves the Dienst2 external ID embedded in Keycloak's storage ID.
+     */
     @Override
-    public UserModel getUserById(RealmModel realmModel, String id) {
-        LOGGER.tracef("getUserById realm=%s id=%s", realmModel.getName(), id);
-        StorageId storageId = new StorageId(id);
-        String externalId = storageId.getExternalId();
+    public UserModel getUserById(RealmModel realm, String id) {
+        String externalId = new StorageId(id).getExternalId();
         if (externalId == null) {
-            LOGGER.trace("getUserById ignored because externalId is null");
             return null;
         }
 
         try {
-            Optional<Person> person = Optional.ofNullable(fetchPerson(Integer.parseInt(externalId)));
-            LOGGER.tracef("getUserById result present=%s", person.isPresent());
-            return person.map(value -> toUserModel(realmModel, value)).orElse(null);
-        } catch (NumberFormatException e) {
+            return lookup.findPersonById(componentId, Integer.valueOf(externalId), peopleApiClient)
+                    .map(person -> toUserModel(realm, person))
+                    .orElse(null);
+        } catch (NumberFormatException exception) {
             LOGGER.warnf("Invalid Dienst2 person id '%s'", externalId);
             return null;
-        } catch (IOException e) {
-            LOGGER.errorf(e, "Failed to fetch Dienst2 person by id %s", externalId);
+        } catch (IOException exception) {
+            LOGGER.errorf(exception, "Failed to fetch Dienst2 person by id %s", externalId);
             return null;
         }
     }
 
+    /**
+     * Resolves broker usernames in the form surfconext.*, google.*, or WISVCH.*.
+     */
     @Override
-    public UserModel getUserByUsername(RealmModel realmModel, String username) {
-        LOGGER.tracef("getUserByUsername realm=%s username=%s", realmModel.getName(), username);
-
+    public UserModel getUserByUsername(RealmModel realm, String username) {
         if (username == null || username.isBlank()) {
-            LOGGER.trace("getUserByUsername ignored because username is blank");
             return null;
         }
 
         try {
-            Optional<Person> person;
-            if (username.startsWith("surfconext.")) {
-                String netid = username.substring("surfconext.".length());
-                person = findPersonByNetId(netid);
-                LOGGER.tracef("Resolved via netid=%s present=%s", netid, person.isPresent());
-            } else if (username.startsWith("google.")) {
-                String googleUsername = username.substring("google.".length());
-                person = findPersonByGoogleUsername(googleUsername);
-                LOGGER.tracef("Resolved via google_username=%s present=%s", googleUsername, person.isPresent());
-            } else if (username.startsWith("wisvch.") || username.startsWith("WISVCH.")) {
-                String idPart = username.substring("wisvch.".length());
-                try {
-                    Integer id = Integer.valueOf(idPart);
-                    person = Optional.ofNullable(fetchPerson(id));
-                    LOGGER.tracef("Resolved via id=%s present=%s", String.valueOf(id), person.isPresent());
-                } catch (NumberFormatException ex) {
-                    LOGGER.warnf("Wisvch username prefix contains invalid id '%s'", idPart);
-                    person = Optional.empty();
-                }
-            } else {
-                LOGGER.warnf("Unsupported username prefix for Dienst2UserProvider: %s", username);
-                throw new IllegalArgumentException("Unsupported username prefix for Dienst2UserProvider: " + username);
-            }
-
-            return person.map(value -> toUserModel(realmModel, value)).orElse(null);
-        } catch (IOException e) {
-            LOGGER.errorf(e, "Failed to fetch Dienst2 person for username %s", username);
+            return findPersonByUsername(username)
+                    .map(person -> toUserModel(realm, person))
+                    .orElse(null);
+        } catch (IOException exception) {
+            LOGGER.errorf(exception, "Failed to fetch Dienst2 person for username %s", username);
             return null;
         }
     }
 
+    /**
+     * Dienst2 does not support an email lookup, so this provider does not claim one.
+     */
     @Override
-    public UserModel getUserByEmail(RealmModel realmModel, String email) {
-        if (email == null || email.isBlank()) {
-            return null;
+    public UserModel getUserByEmail(RealmModel realm, String email) {
+        return null;
+    }
+
+    private Optional<Person> findPersonByUsername(String username) throws IOException {
+        if (username.startsWith(SURFCONEXT_PREFIX)) {
+            return lookup.findPersonByNetId(componentId, username.substring(SURFCONEXT_PREFIX.length()), peopleApiClient);
+        }
+        if (username.startsWith(GOOGLE_PREFIX)) {
+            return lookup.findPersonByGoogleUsername(componentId, username.substring(GOOGLE_PREFIX.length()), peopleApiClient);
+        }
+        if (username.regionMatches(true, 0, WISVCH_PREFIX, 0, WISVCH_PREFIX.length())) {
+            try {
+                Integer personId = Integer.valueOf(username.substring(WISVCH_PREFIX.length()));
+                return lookup.findPersonById(componentId, personId, peopleApiClient);
+            } catch (NumberFormatException exception) {
+                LOGGER.warnf("WISVCH username contains invalid id '%s'", username);
+                return Optional.empty();
+            }
         }
 
-        LOGGER.debugf("getUserByEmail called with %s but lookup by email is unsupported", email);
-        throw new UnsupportedOperationException("Dienst2UserProvider does not support lookup by email");
+        LOGGER.debugf("Ignoring unsupported Dienst2 username prefix: %s", username);
+        return Optional.empty();
     }
 
     private UserModel toUserModel(RealmModel realm, Person person) {
-        List<GroupModel> groups = resolveGoogleGroups(realm, person);
-        return new Dienst2UserAdapter(session, realm, model, person, groups);
+        try {
+            List<String> groupNames = getGoogleGroups(person);
+            return new Dienst2UserAdapter(session, realm, model, person, groupResolver.resolve(realm, groupNames));
+        } catch (IOException exception) {
+            LOGGER.errorf(exception, "Failed to fetch Google groups for Dienst2 person %s", person.getId());
+            return new Dienst2UserAdapter(session, realm, model, person, List.of());
+        }
     }
 
-    private List<GroupModel> resolveGoogleGroups(RealmModel realm, Person person) {
+    private List<String> getGoogleGroups(Person person) throws IOException {
         if (person.getId() == null) {
-            LOGGER.trace("resolveGoogleGroups skipped: person id is null");
-            return Collections.emptyList();
+            return List.of();
         }
         if (person.getGoogleUsername() == null || person.getGoogleUsername().isBlank()) {
-            LOGGER.tracef("resolveGoogleGroups skipped: no google_username for person %s", person.getId());
-            return Collections.emptyList();
+            return List.of();
         }
-
-        try {
-            List<String> cachedGroupNames = groupCache.getIfPresent(groupCacheKey(person.getId()));
-            if (cachedGroupNames != null) {
-                LOGGER.tracef("Using cached google groups for person %s", person.getId());
-                return resolveGroups(realm, cachedGroupNames);
-            }
-
-            List<String> groupNames = peopleApiClient.getGoogleGroups(person.getId());
-            if (groupNames == null || groupNames.isEmpty()) {
-                LOGGER.tracef("No google groups for person %s", person.getId());
-                return Collections.emptyList();
-            }
-
-            LOGGER.tracef("Google groups for person %s -> %s", person.getId(), groupNames);
-            List<String> immutableGroupNames = groupNames.stream()
-                    .filter(Objects::nonNull)
-                    .filter(name -> !name.isBlank())
-                    .distinct()
-                    .toList();
-            if (immutableGroupNames.isEmpty()) {
-                return Collections.emptyList();
-            }
-            groupCache.put(groupCacheKey(person.getId()), immutableGroupNames);
-            return resolveGroups(realm, immutableGroupNames);
-        } catch (IOException e) {
-            LOGGER.errorf(e, "Failed to fetch google groups for Dienst2 person %s", person.getId());
-            return Collections.emptyList();
-        }
-    }
-
-    private Person fetchPerson(Integer id) throws IOException {
-        Person cached = personCache.getIfPresent(personIdCacheKey(id));
-        if (cached != null) {
-            LOGGER.tracef("Using cached person %s", id);
-            return cached;
-        }
-        Person person = peopleApiClient.getPersonById(id).orElse(null);
-        if (person != null) {
-            cachePerson(person);
-        }
-        return person;
-    }
-
-    private Optional<Person> findPersonByNetId(String netId) throws IOException {
-        Person cached = personCache.getIfPresent(netIdCacheKey(netId));
-        if (cached != null) {
-            LOGGER.tracef("Using cached person for netid=%s", netId);
-            return Optional.of(cached);
-        }
-        Optional<Person> person = peopleApiClient.findByNetId(netId);
-        person.ifPresent(this::cachePerson);
-        return person;
-    }
-
-    private Optional<Person> findPersonByGoogleUsername(String googleUsername) throws IOException {
-        Person cached = personCache.getIfPresent(googleUsernameCacheKey(googleUsername));
-        if (cached != null) {
-            LOGGER.tracef("Using cached person for google_username=%s", googleUsername);
-            return Optional.of(cached);
-        }
-        Optional<Person> person = peopleApiClient.findByGoogleUsername(googleUsername);
-        person.ifPresent(this::cachePerson);
-        return person;
-    }
-
-    private void cachePerson(Person person) {
-        if (person.getId() != null) {
-            personCache.put(personIdCacheKey(person.getId()), person);
-        }
-        if (person.getNetid() != null && !person.getNetid().isBlank()) {
-            personCache.put(netIdCacheKey(person.getNetid()), person);
-        }
-        if (person.getGoogleUsername() != null && !person.getGoogleUsername().isBlank()) {
-            personCache.put(googleUsernameCacheKey(person.getGoogleUsername()), person);
-        }
-    }
-
-    private List<GroupModel> resolveGroups(RealmModel realm, List<String> groupNames) {
-        Map<String, GroupModel> existing = realm.getGroupsStream()
-                .collect(Collectors.toMap(GroupModel::getName, Function.identity(), (a, b) -> a));
-        List<GroupModel> resolved = new ArrayList<>();
-        for (String name : groupNames) {
-            if (name == null || name.isBlank()) {
-                continue;
-            }
-            GroupModel group = existing.get(name);
-            if (group == null) {
-                group = realm.createGroup(name);
-                existing.put(name, group);
-                LOGGER.debugf("Created Keycloak group '%s' from Dienst2 google groups", name);
-            }
-            if (!resolved.contains(group)) {
-                resolved.add(group);
-            }
-        }
-        return Collections.unmodifiableList(resolved);
-    }
-
-    private String personIdCacheKey(Integer personId) {
-        return cacheNamespace + "person:id:" + personId;
-    }
-
-    private String netIdCacheKey(String netId) {
-        return cacheNamespace + "person:netid:" + netId;
-    }
-
-    private String googleUsernameCacheKey(String googleUsername) {
-        return cacheNamespace + "person:google-username:" + googleUsername;
-    }
-
-    private String groupCacheKey(Integer personId) {
-        return cacheNamespace + "groups:" + personId;
+        return lookup.getGoogleGroups(componentId, person.getId(), peopleApiClient);
     }
 }
